<resources>
  <string name="app_name">berry</string>
  <string name="title_activity_login">登录</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">用户名不能为空</string>
  <string name="invalid_password">密码不能为空</string>
  <string name="default_content_description">empty</string>
  <string name="empty_content">""</string>


<!--  <string name="title_activity_home">HomeActivity</string>-->
  <string name="title_fragment_tasks">我的工单</string>
  <string name="title_fragment_task_detail">工单详细信息</string>
  <string name="title_fragment_dashboard">设备分布</string>
  <string name="title_fragment_settings">设置</string>


  <string name="task_no">工单号</string>
  <string name="task_id_label">工单号</string>
  <string name="task_content_label">内容</string>
  <string name="task_note_label">派工备注</string>
  <string name="task_publisher_label">派工人</string>
  <string name="task_dispatcher_label">处理人</string>
  <string name="task_id_test">T_20231228_00001</string>
  <string name="task_dispatcher_test">川建国</string>
  <string name="task_content_test">桃之夭夭，灼灼其华。之子于归，宜其室家。</string>
  <string name="task_publish_date_time">发布时间</string>
  <string name="task_info_label">工单基本信息：</string>
  <string name="task_device_info_label">需要处理的设备：</string>

  <string name="btn_text_logout">退出登录</string>
  <string name="logout_note">登录退出后不会删除任何数据。</string>
  <string name="button_logout_text">退出登录</string>
  <string name="button_logout_cancel">取消</string>

  <string name="login_hint_username">请输入用户名</string>
  <string name="login_hint_password">请输入如密码</string>
  <string name="login_button_text">登录</string>
  <string name="login_failed">登录失败</string>
  <string name="no_data_message">没有数据!</string>

  <string name="date_selector_today">今日</string>
  <string name="date_selector_yesterday">昨日</string>
  <string name="date_selector_calendar">日历</string>
  <string name="date_format">%04d年%02d月%02d日</string>
  <string name="date_selector_error">日期不能选择比今天更前的日期!</string>
  <string name="start_service">start_service</string>
  <string name="stop_service">stop_service</string>
  <string name="device_info_id">设备编号</string>
  <string name="device_info_ip">IP</string>

  <string name="loading">加载中...</string>


</resources>