<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="100dp">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.18" />

  <TextView
    android:id="@+id/id_label"
    android:layout_width="0dp"
    android:layout_height="20dp"
    android:text="@string/task_id_label"
    android:gravity="end"
    android:textSize="15sp"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toLeftOf="@id/guideline" />

  <TextView
    android:id="@+id/id"
    android:layout_width="0dp"
    android:layout_height="20dp"
    android:text="@string/task_id_test"
    android:textSize="15sp"
    android:textIsSelectable="true"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toRightOf="@id/guideline"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/dispatcher_label"
    android:layout_width="wrap_content"
    android:layout_height="20dp"
    android:text="@string/task_dispatcher_label"
    android:layout_marginStart="30dp"
    android:textSize="15sp"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toRightOf="@id/id"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/dispatcher"
    android:layout_width="0dp"
    android:layout_height="20dp"
    android:text="@string/task_dispatcher_test"
    android:textSize="15sp"
    android:layout_marginTop="10dp"
    app:layout_constraintLeft_toRightOf="@id/dispatcher_label"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/content_label"
    android:layout_width="0dp"
    android:layout_height="20dp"
    android:gravity="end"
    android:text="@string/task_content_label"
    android:textSize="15sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@id/guideline"
    app:layout_constraintTop_toBottomOf="@id/id_label" />

  <TextView
    android:id="@+id/content"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:ellipsize="end"
    android:maxLines="3"
    android:text="@string/task_content_test"
    android:textSize="15sp"
    android:layout_marginEnd="10dp"
    app:layout_constraintLeft_toRightOf="@id/guideline"
    app:layout_constraintTop_toBottomOf="@id/id_label"
    app:layout_constraintRight_toLeftOf="@id/imageButton"/>

  <ImageButton
    android:id="@+id/imageButton"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    android:paddingStart="10dp"
    android:paddingEnd="20dp"
    app:srcCompat="@drawable/ic_arrow_forward"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:ignore="RtlSymmetry,SpeakableTextPresentCheck"
    android:contentDescription="TODO" />


</androidx.constraintlayout.widget.ConstraintLayout>