<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center">

      <Button
        android:id="@+id/button_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStartService"
        android:text="@string/start_service" />

      <Button
        android:id="@+id/button_stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStopService"
        android:text="@string/stop_service" />

      <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_content" />

    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>