<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="java.time.format.DateTimeFormatter" />

    <variable
      name="task"
      type="com.vroad.app.berry.data.pojo.Task" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
      style="@style/Theme.Berry.RecycleView.Entry"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:orientation="vertical"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <LinearLayout style="@style/Theme.Berry.RowContainer">

        <TextView
          style="@style/Theme.Berry.Label"
          android:text="@string/task_id_label" />

        <TextView
          style="@style/Theme.Berry.Span"
          android:text="@{task.id}" />

        <TextView
          style="@style/Theme.Berry.Label"
          android:text="@string/task_publisher_label" />

        <TextView
          style="@style/Theme.Berry.Span.Last"
          android:text="@{task.publisher.realName}" />
      </LinearLayout>

      <LinearLayout style="@style/Theme.Berry.RowContainer">

        <TextView
          style="@style/Theme.Berry.Label"
          android:text="@string/task_content_label" />

        <TextView
          style="@style/Theme.Berry.Span.Last"
          android:lines="2"
          android:text='@{task.getContent()}' />
      </LinearLayout>

      <LinearLayout style="@style/Theme.Berry.RowContainer">

        <TextView
          style="@style/Theme.Berry.Label"
          android:text="@string/task_publish_date_time" />

        <TextView
          style="@style/Theme.Berry.Span.Last"
          android:text='@{task.createTime.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"))}' />
      </LinearLayout>
    </LinearLayout>

    <ImageView
      style="@style/Theme.Berry.Icon.Navigator"
      android:layout_marginEnd="10dp"
      android:importantForAccessibility="no"
      android:src="@drawable/ic_arrow_forward"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>