<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/container"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".ui.login.LoginActivity"
  tools:ignore="MissingConstraints">

  <LinearLayout
    style="@style/ConstraintLayout.Center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="50dp"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Berry.TextInputEditText.OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_username"
        app:hintAnimationEnabled="true"
        app:startIconDrawable="@drawable/ic_account_box_24dp">

        <EditText
          android:id="@+id/username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:importantForAutofill="no"
          android:inputType="text"
          tools:ignore="LabelFor" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/Theme.Berry.TextInputEditText.OutlinedRoundBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password"
        app:hintAnimationEnabled="true"
        app:startIconDrawable="@drawable/ic_lock_24dp">

        <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:autofillHints="no"
          android:inputType="textPassword"
          tools:ignore="LabelFor" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"
        android:enabled="false"
        android:onClick="onClickLoginButton"
        android:textSize="20sp"
        android:text="@string/login_button_text" />
    </LinearLayout>
  </LinearLayout>

  <ProgressBar
    android:id="@+id/loading"
    style="@style/ConstraintLayout.Center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>